<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">On Budget!</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="expenditures">Expenditures</string>
    <string name="scheduled_payments">Scheduled Payments</string>
    <string name="dashboard">Dashboard</string>
    <string name="admin">Admin</string>
    <string name="transfer">Transfer</string>
    <string name="categories">Categories</string>
    <string name="accounting">Accounting</string>
    <string name="help">Help</string>
    <string name="add_payment_schedule">Add Scheduled Payment</string>
    <string name="view_all_transactions">View All Transactions</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="subcategory">Sub-category</string>
    <string name="note">Note</string>
    <string name="who">Who</string>
    <string name="where">Where</string>
    <string name="current_value">Current Value</string>
    <string name="new_value">New Value</string>
    <string name="name">Name</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_transfer">Add Transfer</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_note">Enter note</string>
    <string name="see_previous_transfer">See previous transfer</string>
    <string name="see_next_transfer">See next transfer</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="percentage_short">%</string>
    <string name="percentagesDontAddTo100">Percentages must add to 100</string>
    <string name="oneUserMustBeDefault">One user must be set to default</string>
    <string name="splitMustEqual100">Total split must equal 100%</string>
    <string name="budgetOverlap">Can\'t add, as it overlaps with an existing budget entry.</string>
    <string name="budgetExistsAtThatNode">Budget already exists for that name, can\'t add.</string>
    <string name="toFromCantBeSame">To and From values can\'t be the same</string>
    <string name="toolTipDate">The date that the transaction occurred.</string>
    <string name="toolTipAmount">The amount of the transaction.</string>
    <string name="toolTipCategory">The major category to which this transaction should be filed.</string>
    <string name="toolTipSubCategory">The sub-category to which this transaction should be filed.</string>
    <string name="toolTipWhere">Where did this transaction occur, e.g. the vendor name.</string>
    <string name="toolTipNote">An optional note about this transaction. Enter anything that is meaningful to you.</string>
    <string name="toolTipPaidBy">Who paid for this item?</string>
    <string name="toolTipBoughtFor">Who was this item purchased for?</string>
    <string name="toolTipSplit">In a multi-user setup, how will this expense be split across the 2 users?</string>
    <string name="toolTipPrevious">Go to previous item</string>
    <string name="toolTipNext">Go to next item</string>
    <string name="toolTipAmt1">The primary user\'s portion of the total amount.</string>
    <string name="toolTipAmt2">The secondary user\'s portion of the total amount.</string>
    <string name="toolTipCategorySubCategory">The category-subCategory within which the transaction is filed.</string>
    <string name="toolTipWhoInput">Who paid for the purchase, and who it is for.  (Expand if paid-by name is different from bought-for.)</string>
    <string name="toolTipWhoView">Who paid for the expense, and who was it bought for. If name is the same, only one name is shown.</string>
    <string name="toolTipDisc">Indicates whether the Category is Discretionary or not. D = Discretionary, ND = Non-Discretionary</string>
    <string name="toolTipType">Transaction type. E = manually entered expense, S = generated scheduled payment, T = manually entered transfer</string>
    <string name="toolTipRunningTotal">A running total of the amount that primary user owes secondary user. (Negative means secondary owes primary.)</string>
    <string name="toolTipPrivacy">Is this category marked as private? (Private categories are not visible to other user.)</string>
    <string name="toolTipCatState">Indicates whether category is still used for new transactions.</string>
    <string name="toolTipCatDefault">Indicates whether category is the overall app default, or the category default, or neither.</string>
    <string name="toolTipBudgetCategory">The category/sub-category to which this budget applies.</string>
    <string name="toolTipBudgetPeriod">Indicates if budget applies to a single month or entire year.</string>
    <string name="toolTipBudgetWho">The user to which this budget applies. (Used when users manage sometimes separate finances.)</string>
    <string name="toolTipBudgetOccurence">Indicates if budget occurs monthly/annually, or applies only to a single month/year</string>
    <string name="toolTipActual">Total actual amount spent for this category.</string>
    <string name="toolTipBudgeted">Total budgeted amount spent for this category.</string>
    <string name="toolTipDelta">Difference between actual amount spent and budgeted amount for this category.</string>
    <string name="add_expense">Add Expense</string>
    <string name="tracker">Tracker</string>
    <string name="did_you_know">Did You Know?</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="sign_out">Sign out</string>
    <string name="loan_calc">Loan\nCalc.</string>
    <string name="click_to_expand">Click to expand</string>
    <string name="isrbet">ISRBET</string>
    <string name="quote_of_the_day">Quote of the day:</string>
    <string name="next_payment_date">Next Payment Date</string>
    <string name="next_date">Next Date</string>
    <string name="regularity">Regularity</string>
    <string name="period">Period</string>
    <string name="click_to_select">Click to select</string>
    <string name="primary_user_name">Primary user name</string>
    <string name="authorize_second_user">Authorize second user?</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="join_other_user">Join other user?</string>
    <string name="enter_authorization_key">Enter authorization key</string>
    <string name="second_user_name">Second user name</string>
    <string name="second_user_email">Second user email</string>
    <string name="share_this_authorization_key_with_second_user">Share this authorization key with second user:</string>
    <string name="copy_authorization_key">Copy authorization key</string>
    <string name="disconnect_from_primary_user">Disconnect from primary user?</string>
    <string name="show_chart">Show chart:</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="budget_actual_comparison">Budget/Actual Comparison</string>
    <string name="navigate">Navigate</string>
    <string name="view">View</string>
    <string name="filter">Filter</string>
    <string name="options">Options</string>
    <string name="view_by">View by</string>
    <string name="month">Month</string>
    <string name="ytd">YTD</string>
    <string name="year">Year</string>
    <string name="all_time">All-Time</string>
    <string name="reset">Reset</string>
    <string name="paint">Paint</string>
    <string name="drag_the_categories">Drag the categories above to move them into the desired order. Click the Reset icon to remove colour. Click the Paint icon to apply a colour to the category.</string>
    <string name="accounting_summary">Accounting Summary</string>
    <string name="calculations">Calculations</string>
    <string name="details">Details</string>
    <string name="for_string">For</string>
    <string name="expenses_paid_by">Paid By</string>
    <string name="joint">Joint</string>
    <string name="transfers_from">Transferred from</string>
    <string name="colour_or_sort">Colour or sort</string>
    <string name="load_users">Load Users</string>
    <string name="do_something">Do something</string>
    <string name="current_user">Current User</string>
    <string name="add_budget">Add Budget</string>
    <string name="budget_period">Budget period</string>
    <string name="monthly">Monthly</string>
    <string name="annual">Annual</string>
    <string name="loan">Loan</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="first_payment_date">First Payment Date</string>
    <string name="amortization_yrs">Amortization (Yrs)</string>
    <string name="interest_rate">Interest Rate (%)</string>
    <string name="payment_frequency">Payment Frequency</string>
    <string name="weekly">Weekly</string>
    <string name="biweekly">Biweekly</string>
    <string name="accelerated_payment_amt">Accelerated Payment Amt</string>
    <string name="calculate">Calculate</string>
    <string name="budget_for">Budget for</string>
    <string name="vendor_name">Vendor name</string>
    <string name="note_optional">Note (optional)</string>
    <string name="paid_by">Paid by</string>
    <string name="bought_for">Bought for</string>
    <string name="split">Split</string>
    <string name="type">Type</string>
    <string name="view_scheduled_payments">View scheduled payments</string>
    <string name="view_transfers">View transfers</string>
    <string name="view_translations">View Translations</string>
    <string name="view_all">View all</string>
    <string name="indicates_if_category_is_private_or_not">Indicates if category is private or not.</string>
    <string name="touch_screen_anywhere_to_dismiss">(touch screen anywhere to dismiss)</string>
    <string name="translated_to">To</string>
    <string name="translated_from">From</string>
    <string name="after">After</string>
    <string name="before">Before</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="credit_transaction">Credit transaction</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="go_to_next_transaction">Go to next transaction</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="discretionary">Discretionary</string>
    <string name="non_discretionary">Non-Discretionary</string>
    <string name="show_delta_as_percentage">Show Delta as %</string>
    <string name="show_delta_as_currency">Show Delta as $</string>
    <string name="version_name">Version Name</string>
    <string name="version_code">Version Code</string>
    <string name="onbudget_help_is_located_at_the_link_below">OnBudget! help is located at the link below.</string>
    <string name="search">Search</string>
    <string name="click_to_restart_hints">Click to restart hints</string>
    <string name="restart_hints">Restart hints</string>
    <string name="add_funds_transfer">Add Funds Transfer</string>
    <string name="email_the_address_below_with_any_support_issues_all_feedback_is_welcome">Email the address below with any support issues. All feedback is welcome.</string>
    <string name="show_all_columns">Show All Columns</string>
    <string name="show_summary_columns">Show Summary Columns</string>
    <string name="show_income_details">Show Income Details</string>
    <string name="show_pension_details">Show Pension Details</string>
    <string name="show_rrsp_details">Show RRSP Details</string>
    <string name="show_tfsa_details">Show TFSA Details</string>
    <string name="show_savings_details">Show Savings Details</string>
    <string name="show_property_details">Show Property Details</string>
    <string name="show_tax_columns">Show Tax Columns</string>
</resources>