<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.isrbet.budgetsbyisrbet.MainActivity">
    <group
        android:id="@+id/nav_drawer_group">
        <item
            android:id="@+id/SettingsFragment"
            android:title="@string/settings" />
        <item
            android:id="@+id/ScheduledPaymentFragment"
            android:title="@string/scheduled_payments"/>
        <item
            android:id="@+id/TransactionViewAllFragment"
            android:title="@string/view_all"
            android:icon="@drawable/ic_fas_binoculars"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/ViewTranslationsFragment"
            android:title="@string/view_translations"/>
        <item
            android:id="@+id/ViewTransfersFragment"
            android:title="@string/view_transfers"
            android:icon="@drawable/ic_fas_binoculars"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/ViewS"
            android:title="@string/view_scheduled_payments"
            android:icon="@drawable/ic_fas_binoculars"
            app:showAsAction="ifRoom"/>
    </group>
    <group
        android:id="@+id/transaction_options_group">
        <item
            android:id="@+id/Edit"
            android:title="@string/edit"
            android:icon="@drawable/ic_far_edit"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/Delete"
            android:title="@string/delete"
            android:icon="@drawable/ic_far_trash_alt"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/Search"
            android:title="@string/search"
            android:icon="@drawable/ic_fas_search"
            app:showAsAction="ifRoom"/>
    </group>
    <group
        android:id="@+id/directional_group">
        <item
            android:id="@+id/AddBudget"
            android:title="@string/add_budget"
            android:icon="@drawable/ic_fas_plus"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/Previous"
            android:title="@string/previous"
            android:icon="@drawable/ic_fas_chevron_left"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/Next"
            android:title="@string/next"
            android:icon="@drawable/ic_fas_chevron_right"
            app:showAsAction="ifRoom"/>
    </group>
    <group
        android:id="@+id/filter_options_group"
        android:checkableBehavior="all">
        <item
            android:id="@+id/FilterTitle"
            android:checkable="false"
            android:title="@string/filter"/>
        <item
            android:id="@+id/FilterDiscretionary"
            android:title="@string/discretionary"/>
        <item
            android:id="@+id/FilterNonDiscretionary"
            android:title="@string/non_discretionary"/>
        <item
            android:id="@+id/FilterPaidByTitle"
            android:checkable="false"
            android:title="@string/paid_by"/>
        <item
            android:id="@+id/FilterBoughtForTitle"
            android:checkable="false"
            android:title="@string/bought_for"/>
        <item
            android:id="@+id/DeltaPercentage"
            android:title="@string/show_delta_as_percentage"/>
        <item
            android:id="@+id/DeltaNumeric"
            android:title="@string/show_delta_as_currency"/>
    </group>
    <group
        android:id="@+id/groupx">
        <item
            android:id="@+id/SignOut"
            android:title="@string/sign_out"/>
        <item
            android:id="@+id/DashboardFragment"
            android:title="@string/dashboard"
            android:icon="@drawable/ic_fas_compass"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/AddCategory"
            android:title="Add Category / SubCategory"
            android:icon="@drawable/ic_fas_plus"
            app:showAsAction="ifRoom"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/EditCategory"
            android:title="Edit Category List"
            android:icon="@drawable/ic_far_folder_open"
            app:showAsAction="ifRoom"
            tools:ignore="HardcodedText" />
    </group>
</menu>