<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/nav_drawer_group0"
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home"/>
    </group>
    <group
        android:id="@+id/nav_drawer_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/TransactionFragment"
            android:title="@string/add_expense"/>
        <item
            android:id="@+id/TransactionViewAllFragment"
            android:title="@string/view_all_transactions" />
        <item
            android:id="@+id/TrackerFragment"
            android:title="@string/tracker"/>
        <item
            android:id="@+id/DashboardFragment"
            android:title="@string/dashboard"/>
    </group>
    <group
        android:id="@+id/nav_drawer_group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/TransferFragment"
            android:title="@string/add_funds_transfer"/>
        <item
            android:id="@+id/AccountingFragment"
            android:title="@string/accounting" />
    </group>
    <group
        android:id="@+id/nav_drawer_group6"
        android:checkableBehavior="single">
        <item
            android:id="@+id/HelpFragment"
            android:title="@string/help" />
    </group>
    <group
        android:id="@+id/nav_drawer_group7"
        android:checkableBehavior="single">
        <item
            android:id="@+id/AdminFragment"
            android:title="@string/admin" />
    </group>
</menu>