<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.isrbet.budgetsbyisrbet.HelpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_name"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/help_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_code"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/help_version_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingTop="40dp"
        android:text="@string/onbudget_help_is_located_at_the_link_below"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="https://isrbet-consulting.webnode.page/onbudget-help/"
        tools:ignore="HardcodedText" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_the_address_below_with_any_support_issues_all_feedback_is_welcome"
            android:textSize="16sp"
            android:layout_gravity="start"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="isrbetconsulting@gmail.com"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:autoLink="email"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/restartHintButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/restart_hints"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/click_to_restart_hints"
            android:tooltipText="Restart hints, i.e. see them all again as you visit each screen."
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            app:drawableTopCompat="@drawable/ic_baseline_restart_alt_24" />
    </LinearLayout>
</LinearLayout>